fix: Filter menu no longer covers global menu bar

--- a/packages/frontend/src/components/GlobalMenuBar/globalMenuBar.module.css
+++ b/packages/frontend/src/components/GlobalMenuBar/globalMenuBar.module.css
@@ -9,7 +9,7 @@
   height: 2.25rem;
   min-width: 6.4375rem;
   user-select: none;
-  z-index: 11;
+  z-index: 1111;
 }
 
 .menuText {
